example/lib/src/generated/errors/errors_localization_sk.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Slovak (`sk`).
class ErrorsLocalizationSk extends ErrorsLocalization {
  ErrorsLocalizationSk([String locale = 'sk']) : super(locale);

  @override
  String get error => 'Došlo k chybe';

  @override
  String get unexpectedError => 'Nastala neočakávaná chyba';

  @override
  String get bugReportSentText => 'Hlášenie o chybách bolo úspešne odoslané.';
}
